[WIP] New create game frontend concept.

--- a/resources/assets/less/create-game.less
+++ b/resources/assets/less/create-game.less
@@ -25,10 +25,15 @@
       color: rgba(255, 255, 255, 0.75);
     }
   }
+
+  .errors {
+    float: left;
+    width: 100%;
+  }
 }
 
-/* SM */
-@media (max-width: @screen-sm-max) {
+/* XS */
+@media (max-width: @screen-xs-max) {
   .create-game-container {
 
     .user-avatar.empty {
