--- a/resources/assets/less/create-game.less
+++ b/resources/assets/less/create-game.less
@@ -1,11 +1,65 @@
 @import "variables";
 
 .create-game-container {
+  padding: 0;
+  width: 44%;
+  .panel{
+    margin-bottom: 0;
+  }
+
+  .panel-body {
+    padding: 0;
+  }
+  .result-container{
+    width: 100%;
+    text-align: center;
+    //background: #D0D0D0;
+  }
+  .result{
+    display: inline-block;
+    margin: 10px;
+  }
+  .info .name{
+    text-transform: uppercase;
+    text-align: left;
+    margin-left: 10px;
+    font-size: 13px;
+  }
+  .versus{
+    float: left;
+  }
+  .team{
+    background: #E6E6E6;
+    padding: 18px;
+  }
+  .game-graphic-datepicker{
+    margin-top: 20px;
+  }
+  .team-user{
+    width: 50%;
+    float: left;
+  }
   .game-graphic {
     width: 100%;
     border: 0;
-  }
+    margin-top: 26px;
+    text-align: center;
+    .team-a,.team-b{
+      width: 100%;
+      display: inline-block;
+      text-align: right;
+    }
 
+  }
+  .panel-heading{
+    text-transform: uppercase;
+    text-align: center;
+    padding: 20px;
+    font-weight: bold;
+  }
+  .user-avatar{
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  }
   .user-avatar.empty {
     cursor: pointer;
     text-align: center;
@@ -54,6 +108,6 @@
   .create-game-container
   .result-container.main
   .result {
-    width: 85px;
+    width: 140px;
   }
 }
