--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -5,6 +5,11 @@ body {
   font-family: TitilliumText, Helvetica, Arial, sans-serif;
 }
 
+.ngdialog.ngdialog-theme-default {
+  padding-bottom: 0;
+  padding-top: 0;
+}
+
 .animate-show {
   opacity: 1;
 }
@@ -35,24 +40,33 @@ body {
   -moz-border-radius: @avatar-border-radius;
   width: @avatar-max-size;
   height: @avatar-max-size;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+
+  img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: @avatar-max-size;
+    max-height: @avatar-max-size;
+    opacity: 0;
+    filter: alpha(opacity=0);
+  }
 }
 
-.preload.user-avatar {
-  transition-duration: 0;
+.user-avatar.mini {
+  display: inline-block;
+  width: @mini-avatar-max-size;
+  height: @mini-avatar-max-size;
+
+  img {
+    max-width: @mini-avatar-max-size;
+    max-height: @mini-avatar-max-size;
+  }
 }
 
-.user-avatar.dragover {
-  opacity: 0.1;
-}
-
-.user-avatar img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  max-width: @avatar-max-size;
-  max-height: @avatar-max-size;
-  opacity: 0;
-  filter: alpha(opacity=0);
+.list-player-name {
+  display: inline-block;
+  margin-left: 10px;
 }
 
 .content-wrap {
@@ -62,6 +76,7 @@ body {
   margin-bottom: 10px;
   display: table;
   max-width: 768px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
@@ -220,6 +235,10 @@ body {
 
   .collapsed-text {
     display: inline;
+  }
+
+  .team-a {
+    border-right: 1px solid rgba(212, 212, 212, 0.6);
   }
 }
 
