Game creation and editing frontend finished.

--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -3,6 +3,7 @@
 body {
   background: #E4E4E4 url("../img/noise-bg.png");
   font-family: TitilliumText, Helvetica, Arial, sans-serif;
+  height: auto;
 }
 
 .ngdialog.ngdialog-theme-default {
