Profile page has been redesigned in material style

--- a/resources/assets/less/profile.less
+++ b/resources/assets/less/profile.less
@@ -9,7 +9,7 @@ table.user-profile-table th * {
   text-align: center;
   width: 100%;
   height: auto;
-  padding-bottom: 20px;
+  padding: 20px 0;
 }
 
 .user-profile .user-avatar-container .user-avatar {
