--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -2,7 +2,8 @@
 
 body {
   background: #E4E4E4 url("../img/noise-bg.png");
-  font-family: TitilliumText, Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-size: @base-font-size;
 }
 
 .animate-show {
