--- a/resources/assets/less/games.less
+++ b/resources/assets/less/games.less
@@ -89,9 +89,10 @@
   border-color: #FFC7C7;
 }
 
+
 .team .rating-delta.win {
   color: @color-winner;
-  background-color: #D5D7DE;
+  background-color: #CED7F3;
   border-color: #A0ACD8;
 }
 
