[WIP] New complain button style

--- a/resources/assets/less/games.less
+++ b/resources/assets/less/games.less
@@ -35,6 +35,14 @@
   vertical-align: middle;
 }
 
+.active-complain {
+  color: @color-loser;
+}
+
+.not-active-complain {
+  color: #A9A9A9;
+}
+
 .team-user .user-avatar {
   background-color: @color-winner;
   position: relative;
