New complain button style

--- a/resources/assets/less/games.less
+++ b/resources/assets/less/games.less
@@ -139,7 +139,7 @@
 
 .game-information .controls {
   position: absolute;
-  right: 0;
+  right: -10px;
 }
 
 .game-information .controls .control-button {
@@ -213,7 +213,7 @@
   }
 
   .game-information .controls {
-    bottom: 0;
+    bottom: -10px;
   }
 
   .game-graphic .team-b {
@@ -226,7 +226,7 @@
 
   .team .rating-delta {
     line-height: @rating-delta-size * 0.7;
-    min-width: @rating-delta-size * 0.7;
+    min-width: @rating-delta-size * 0.8;
     right: -3px;
   }
 }
@@ -249,7 +249,7 @@
 /* SM */
 @media (max-width: @screen-sm-max) {
   .game-information .controls {
-    bottom: 0;
+    bottom: -10px;
   }
 
   .game-graphic {
@@ -279,7 +279,7 @@
   }
 
   .game-information .controls {
-    top: 0;
+    top: -10px;
   }
 }
 
@@ -291,9 +291,5 @@
 
   .game-graphic .name {
     width: 100px;
-  }
-
-  .game-information .controls {
-    top: 0;
   }
 }
