--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -16,6 +16,14 @@ body {
   opacity: 1;
 }
 
+.md-container.md-mode-query {
+  height: @progress-bar-height !important;
+}
+
+.md-bar.md-bar2 {
+  height: @progress-bar-height !important;
+}
+
 .animate-show.ng-hide-add, .animate-show.ng-hide-remove {
   transition: all linear 0.5s;
 }
