--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -42,6 +42,8 @@
 @little-avatar-max-size: 45px;
 @mini-avatar-max-size: 30px;
 
+@progress-bar-height: 7px;
+
 @rating-delta-size: 30px;
 
 @color-separator: #e8e8e8;
