Slight design changes.

--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -20,6 +20,10 @@ body {
   height: @progress-bar-height !important;
 }
 
+.loader-helper {
+  height: @progress-bar-height !important;
+}
+
 .md-bar.md-bar2 {
   height: @progress-bar-height !important;
 }
