Change sides feature added. "Show my games" switcher changed.

--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -20,7 +20,21 @@ body {
   height: @progress-bar-height !important;
 }
 
-.loader-helper {
+.md-button-auto {
+  width: auto !important;
+  height: auto !important;
+}
+
+md-switch {
+  margin: 0;
+}
+
+.exchange-button {
+  font-size: 30px;
+  color: @color-winner;
+}
+
+.loadre {
   height: @progress-bar-height !important;
 }
 
