--- a/resources/assets/less/create-game.less
+++ b/resources/assets/less/create-game.less
@@ -55,7 +55,7 @@
 @media (max-width: @screen-xs-max) {
   .create-game-container {
     .result-container.additional {
-      padding: 30px 0;
+      padding: 0 0 30px;
     }
 
     .user-avatar.empty {
