--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -29,12 +29,13 @@ md-switch {
   margin: 0;
 }
 
+
 .exchange-button {
   font-size: 30px;
   color: @color-winner;
 }
 
-.loadre {
+.loader-helper {
   height: @progress-bar-height !important;
 }
 
