--- a/resources/assets/less/games.less
+++ b/resources/assets/less/games.less
@@ -35,11 +35,15 @@
   vertical-align: middle;
 }
 
-.active-complain {
+.complain {
+  transition-duration: 400ms;
+}
+
+.complain.active-complain {
   color: @color-loser;
 }
 
-.not-active-complain {
+.complain.not-active-complain {
   color: #A9A9A9;
 }
 
