Select player list design changed.

--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -29,6 +29,13 @@ md-switch {
   margin: 0;
 }
 
+.list-group-item.active {
+  background: lighten(@color-winner, 11%);
+  border: none;
+}
+.list-group-item.active:hover {
+  background: lighten(@color-winner, 15%);
+}
 
 .exchange-button {
   font-size: 30px;
