--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -37,6 +37,11 @@ md-switch {
   background: lighten(@color-winner, 15%);
 }
 
+.md-button.md-icon-button {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .exchange-button {
   font-size: 30px;
   color: @color-winner;
@@ -76,7 +81,7 @@ md-switch {
   -moz-border-radius: @avatar-border-radius;
   width: @avatar-max-size;
   height: @avatar-max-size;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: @box-shadow-default;
 
   img {
     position: absolute;
@@ -112,7 +117,7 @@ md-switch {
   margin-bottom: 10px;
   display: table;
   max-width: 768px;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: @box-shadow-default;
 }
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
