--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -50,3 +50,6 @@
 @color-winner: rgb(61, 78, 156);
 @color-loser: #c01935;
 @color-error: #c90000;
+
+@box-shadow-default: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+@box-shadow-selected: 3px 5px 10px 0 rgba(0, 0, 0, 0.25);
