--- a/resources/assets/less/games.less
+++ b/resources/assets/less/games.less
@@ -97,14 +97,14 @@
 
 .team .rating-delta.lose {
   color: @color-loser;
-  background-color: #FFF2F2;
+  background-color: #FFE1E1;
   border-color: #FFC7C7;
 }
 
 
 .team .rating-delta.win {
   color: @color-winner;
-  background-color: #CED7F3;
+  background-color: #C4D2FF;
   border-color: #A0ACD8;
 }
 
