--- a/resources/assets/less/profile.less
+++ b/resources/assets/less/profile.less
@@ -17,6 +17,15 @@ table.user-profile-table th * {
   cursor: pointer;
 }
 
+.delete-profile-button {
+  color: @color-winner;
+}
+
+.delete-profile-button:hover {
+  background: @color-loser !important;
+  color: #fff !important;
+}
+
 .user-profile .user-avatar-container .user-avatar:hover {
   opacity: 0.5;
   transition-duration: 400ms;
