--- a/resources/assets/less/create-game.less
+++ b/resources/assets/less/create-game.less
@@ -1,5 +1,15 @@
 @import "variables";
 
+.change-sides-button {
+  margin-top: 10px !important;
+}
+
+.change-sides-button:hover {
+  -webkit-box-shadow: @box-shadow-default;
+  -moz-box-shadow: @box-shadow-default;
+  box-shadow: @box-shadow-default;
+}
+
 .exchange {
   position: relative;
   width: 30px;
