Colors were encapsulated in one LESS file.

--- a/resources/assets/less/create-game.less
+++ b/resources/assets/less/create-game.less
@@ -60,7 +60,7 @@
       opacity: 1;
 
       .add-button {
-        color: rgba(255, 255, 255, 0.75);
+        color: @plus-active-color;
       }
     }
   }
@@ -72,7 +72,7 @@
       transition-duration: 400ms;
       font-size: 25px;
       line-height: @avatar-max-size;
-      color: rgba(255, 255, 255, 0.25);
+      color: @plus-color;
       padding-left: @avatar-max-size / 40;
       padding-top: @avatar-max-size / 40;
     }
@@ -99,7 +99,7 @@
       .add-button {
         font-size: 25px;
         line-height: @little-avatar-max-size;
-        color: rgba(255, 255, 255, 0.25);
+        color: @plus-color;
         padding-left: @avatar-max-size / 40;
         padding-top: @avatar-max-size / 40;
       }
