--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -9,7 +9,7 @@
 .navbar {
   min-height: 2em;
   margin-bottom: 0;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
+  box-shadow: @navbar-shadow;
 }
 
 .navbar.navbar-center .navbar-nav {
@@ -34,7 +34,7 @@
   padding-top: 0;
   height: 35px;
   line-height: 35px;
-  border-bottom: 1px solid rgba(31, 31, 31, 0.08);
+  border-bottom: @navbar-border
 }
 
 .navbar-collapse li:last-of-type a {
