--- a/resources/assets/less/chart.less
+++ b/resources/assets/less/chart.less
@@ -9,7 +9,7 @@
 }
 
 .users-chart .current-user td {
-  background-color: rgba(140, 161, 220, 0.45);
+  background-color: @select-user-color;
 }
 
 /* XS */
