--- a/resources/assets/less/profile.less
+++ b/resources/assets/less/profile.less
@@ -36,12 +36,12 @@ table.user-profile-table th * {
 .no-touch {
   .delete-button:hover {
     background: @color-loser !important;
-    color: #fff !important;
+    color: @button-touch-background-color !important;
   }
 
   .save-button:hover {
     background: @color-winner !important;
-    color: #fff !important;
+    color: @button-touch-background-color !important;
   }
 }
 
