--- a/resources/assets/less/sign.less
+++ b/resources/assets/less/sign.less
@@ -1,3 +1,5 @@
+@import "variables";
+
 .sign-errors {
   max-width: 330px;
   margin: 0 auto;
@@ -59,8 +61,8 @@
   width: 100%;
   height: 50px;
   line-height: 50px;
-  color: rgba(255, 255, 255, 0.6);
-  background-color: #3b5998;
+  color: @sign-with-color;
+  background-color: @sign-with-background-color;
   text-align: center;
   border-radius: 6px;
   font-size: 16px;
@@ -68,7 +70,7 @@
 }
 
 .sign-with:hover, .sign-with:focus {
-  color: white;
+  color: @sign-with-color-active;
   text-decoration: none;
 }
 
