--- a/resources/assets/less/theme.less
+++ b/resources/assets/less/theme.less
@@ -2,5 +2,5 @@
 @import "mixins/buttons";
 
 .btn-primary {
-  .button-variant(#fff; @color-winner; @color-winner);
+  .button-variant(@button-touch-background-color; @color-winner; @color-winner);
 }
