--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -1,55 +1,2 @@
-// Extra small screen / phone
-
-@screen-xxs: 320px;
-@screen-xxs-max: @screen-xxs;
-
-//** Deprecated `@screen-xs` as of v3.0.1
-@screen-xs:                  480px;
-//** Deprecated `@screen-xs-min` as of v3.2.0
-@screen-xs-min:              @screen-xs;
-//** Deprecated `@screen-phone` as of v3.0.1
-@screen-phone:               @screen-xs-min;
-
-// Small screen / tablet
-//** Deprecated `@screen-sm` as of v3.0.1
-@screen-sm:                  768px;
-@screen-sm-min:              @screen-sm;
-//** Deprecated `@screen-tablet` as of v3.0.1
-@screen-tablet:              @screen-sm-min;
-
-// Medium screen / desktop
-//** Deprecated `@screen-md` as of v3.0.1
-@screen-md:                  992px;
-@screen-md-min:              @screen-md;
-//** Deprecated `@screen-desktop` as of v3.0.1
-@screen-desktop:             @screen-md-min;
-
-// Large screen / wide desktop
-//** Deprecated `@screen-lg` as of v3.0.1
-@screen-lg:                  1200px;
-@screen-lg-min:              @screen-lg;
-//** Deprecated `@screen-lg-desktop` as of v3.0.1
-@screen-lg-desktop:          @screen-lg-min;
-
-// So media queries don't overlap when required, provide a maximum
-@screen-xs-max:              (@screen-sm-min - 1);
-@screen-sm-max:              (@screen-md-min - 1);
-@screen-md-max:              (@screen-lg-min - 1);
-
-@base-font-size: 13px;
-@avatar-max-size: 80px;
-@avatar-border-radius: @avatar-max-size;
-@little-avatar-max-size: 45px;
-@mini-avatar-max-size: 30px;
-
-@progress-bar-height: 7px;
-
-@rating-delta-size: 30px;
-
-@color-separator: #e8e8e8;
-@color-winner: rgb(61, 78, 156);
-@color-loser: #c01935;
-@color-error: #c90000;
-
-@box-shadow-default: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-@box-shadow-selected: 3px 5px 10px 0 rgba(0, 0, 0, 0.25);
+@import "variables/common";
+@import "variables/colors";
